--- a/plugins/user-settings/package.json
+++ b/plugins/user-settings/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@backstage/cli": "^0.1.1-alpha.21",
     "@backstage/dev-utils": "^0.1.1-alpha.21",
+    "@backstage/test-utils": "^0.1.1-alpha.21",
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^10.4.1",
     "@testing-library/user-event": "^12.0.7",
